Renamed the project from music-webshop-rest-service to music-webshop

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>music-webshop-rest-service</name>
+	<name>music-webshop</name>
 	<comment></comment>
 	<projects>
 	</projects>
